using System;
using System.Threading.Tasks;
using Google.Protobuf;
using Trinsic.Sdk.Options.V1;
using Trinsic.Services.Provider.V1;

namespace Trinsic;

public class ProviderService : ServiceBase
{
    public ProviderService(TrinsicOptions options)
        : base(options) {
        Client = new(Channel);
    }

    private Provider.ProviderClient Client { get; }

    /// <summary>
    ///     Create new ecosystem and assigns the authenticated user as owner
    /// </summary>
    /// <param name="request"></param>
    /// <returns></returns>
    public async Task<(Ecosystem ecosystem, string authToken)> CreateEcosystemAsync(CreateEcosystemRequest request) {
        request.Details ??= new();

        // Named / owned ecosystems require authentication to create
        var requiresAuth = !string.IsNullOrWhiteSpace(request.Name) || !string.IsNullOrWhiteSpace(request.Details?.Email);
        var metadata = requiresAuth ? await BuildMetadataAsync(request) : await BuildMetadataAsync();
        var response = await Client.CreateEcosystemAsync(request, metadata);
        var authToken = Base64Url.Encode(response.Profile.ToByteArray());

        return (response.Ecosystem, authToken);
    }

    /// <summary>
    ///     Create new ecosystem and assigns the authenticated user as owner
    /// </summary>
    /// <param name="request"></param>
    /// <returns></returns>
    public (Ecosystem ecosystem, string authToken) CreateEcosystem(CreateEcosystemRequest request) {
        request.Details ??= new();

        // Named / owned ecosystems require authentication to create
        var requiresAuth = !string.IsNullOrWhiteSpace(request.Name) || !string.IsNullOrWhiteSpace(request.Details?.Email);
        var metadata = requiresAuth ? BuildMetadata(request) : BuildMetadata();
        var response = Client.CreateEcosystem(request, metadata);
        var authToken = Base64Url.Encode(response.Profile.ToByteArray());

        return (response.Ecosystem, authToken);
    }
// BEGIN Code generated by protoc-gen-trinsic. DO NOT EDIT.
// target: /home/runner/work/sdk/sdk/dotnet/Trinsic/ProviderService.cs

	/// <summary>
    /// Returns the public key being used to create/verify oberon tokens
    /// </summary>
    
    public GetOberonKeyResponse GetOberonKey() {
        var request = new GetOberonKeyRequest();
        return Client.GetOberonKey(request, BuildMetadata());
    }
	
	/// <summary>
    /// Returns the public key being used to create/verify oberon tokens
    /// </summary>
    
    public async Task<GetOberonKeyResponse> GetOberonKeyAsync() {
        var request = new GetOberonKeyRequest();
        return await Client.GetOberonKeyAsync(request, await BuildMetadataAsync());
    }

	/// <summary>
    /// Upgrade a wallet's DID from `did:key` to another method
    /// </summary>
    
    public UpgradeDidResponse UpgradeDID(UpgradeDidRequest request) {
        
        return Client.UpgradeDID(request, BuildMetadata(request));
    }
	
	/// <summary>
    /// Upgrade a wallet's DID from `did:key` to another method
    /// </summary>
    
    public async Task<UpgradeDidResponse> UpgradeDIDAsync(UpgradeDidRequest request) {
        
        return await Client.UpgradeDIDAsync(request, await BuildMetadataAsync(request));
    }

	/// <summary>
    /// Search for issuers/providers/verifiers in the current ecosystem
    /// </summary>
    
    public SearchWalletConfigurationResponse SearchWalletConfigurations(SearchWalletConfigurationsRequest request) {
        
        return Client.SearchWalletConfigurations(request, BuildMetadata(request));
    }
	
	/// <summary>
    /// Search for issuers/providers/verifiers in the current ecosystem
    /// </summary>
    
    public async Task<SearchWalletConfigurationResponse> SearchWalletConfigurationsAsync(SearchWalletConfigurationsRequest request) {
        
        return await Client.SearchWalletConfigurationsAsync(request, await BuildMetadataAsync(request));
    }

// END Code generated by protoc-gen-trinsic. DO NOT EDIT.
}
public class ExperimentalAttribute : Attribute
{
    // TODO - Experimental attribute object
}